[#16] index: fixed search bar for large screens size + text-align).

--- a/static/css/osga_style.css
+++ b/static/css/osga_style.css
@@ -295,45 +295,46 @@ header .navbar-brand
 /* W3Schools code for dropdown search menu */
 /*******************************************/
 
+#osga_main_search
+{
+	text-align: center;
+}
+
+#myDropdown
+{
+	text-align: center;
+	background-color: transparent;
+	width: 100%;
+}
+
+/* The search field */
+#myInput 
+{
+	display: inline-block;
+	width: 100%;
+	font-size: 16px;
+	border-bottom: 0px solid #ddd;
+	
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {outline: 0px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+#main_dropdown 
+{
+	text-align: center;
+}
+
+
 @media (min-width: 700px)
 {
-	#osga_main_search
-	{
-		text-align: center;
-	}
-
-	#myDropdown
-	{
-		text-align: center;
-		background-color: transparent;
-		width: 100%;
-	}
-
-	/* The search field */
-	#myInput 
-	{
-		display: inline-block;
-		width: 100%;
-		font-size: 16px;
-		border-bottom: 0px solid #ddd;
-		
-	}
-
-	/* The search field when it gets focus/clicked on */
-	#myInput:focus {outline: 0px solid #ddd;}
-
-	/* The container <div> - needed to position the dropdown content */
-	#main_dropdown 
-	{
-		text-align: center;
-	}
-
 	/* Dropdown Content (Hidden by Default) */
 	.dropdown-content 
 	{
 		text-align: center;
-		width: 80%;
-		padding: 2% 20%;
+		width: 70%;
+		padding: 2% 30%;
 		display: block;
 		color: black;
 		background-color: #f6f6f6;
@@ -344,48 +345,18 @@ header .navbar-brand
 	/* Links inside the dropdown */
 	.dropdown-content a 
 	{
-	  color: black;
-	  padding: 4px 10px;
-	  background-color: white;
-	  text-decoration: none;
-	  display: none;
+		text-align: left;
+		color: black;
+		padding: 4px 10px;
+		background-color: white;
+		text-decoration: none;
+		display: none;
 	}
 }
 
 
 @media (max-width: 699px)
 {
-	#osga_main_search
-	{
-		text-align: center;
-	}
-
-	/* The search field */
-	#myInput 
-	{
-		display: inline-block;
-		font-size: 16px;
-		border-bottom: 0px solid #ddd;
-		width: 100%;
-	}
-
-	/* The search field when it gets focus/clicked on */
-	#myInput:focus {outline: 0px solid #ddd;}
-
-	#myDropdown
-	{
-		text-align: center;
-		width: 100%;
-		height: 100%;
-		background-color: transparent;
-	}
-
-	/* The container <div> - needed to position the dropdown content */
-	#main_dropdown 
-	{
-		text-align: center;
-	}
-
 	/* Dropdown Content (Hidden by Default) */
 	.dropdown-content 
 	{
